# screen_tui

./: README.md  core.py  pyproject.toml  ui.py
screen_tui/: __init__.py  cli.py  ui.py
